--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "description": "",
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "vite": "^5.4.9",
-    "concurrently": "^7.0.0"
+    "concurrently": "^9.0.1",
+    "vite": "^5.4.9"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "vue": "^3.5.12"
   }
