feat: :sparkles: fix errors, now app its the brain of the project

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "noteapp",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"vite > NUL 2>&1\" \"node app.js\""
   },
