--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "noteapp",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "app.js",
   "scripts": {
-    "dev": "concurrently \"clear && vite\" \"node app.js\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "concurrently": "^9.0.1",
-    "vite": "^5.4.9"
+    "start": "node app.js",
+    "dev": "vite",
+    "dev:all": "concurrently \"npm start\" \"npm run dev\""
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.0",
+    "vite": "^5.4.10",
+    "vue": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.1.4",
+    "concurrently": "^6.0.0"
   }
 }
