--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.10.0",
     "vite": "^5.4.10",
     "vue": "^3.0.0"
