--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "vite --clearScreen false > /dev/null 2>&1",
-    "dev:all": "concurrently --raw \"npm start\" \"npm run dev\""
+    "dev": "vite --clearScreen false",
+    "dev:all": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
     "mongoose": "^5.13.22",
-    "vite": "^5.4.10",
-    "vue": "^3.0.0"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "concurrently": "^6.0.0"
+    "concurrently": "^9.0.1",
+    "cross-env": "^7.0.3",
+    "vite": "^5.4.10"
   }
 }
