--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev:all": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\""
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cookiejs": "^2.1.3",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^10.0.0",
