--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^5.13.22",
+    "quill": "^2.0.2",
     "vue": "^3.5.12"
   },
   "devDependencies": {
