--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "vite --clearScreen false",
-    "dev:all": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\""
+    "back": "node app.js",
+    "front": "vite --clearScreen false",
+    "devAll": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\""
   },
   "dependencies": {
     "axios": "^1.7.7",
