feat: :hammer: changes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "back": "node app.js",
     "front": "vite --clearScreen false",
+    "dev": "vite", 
+    "start": "node app.js", 
     "devAll": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\"",
     "build": "vite build"
   },
