--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "back": "node app.js",
     "front": "vite --clearScreen false",
-    "dev": "vite", 
-    "start": "node app.js", 
+    "dev": "vite",
+    "start": "node app.js",
     "devAll": "concurrently --raw --hide \"vite\" \"npm start\" \"npm run dev\"",
     "build": "vite build"
   },
@@ -26,7 +26,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^5.13.22",
     "quill": "^2.0.2",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
