--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.21.1",
+    "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
